--- a/index.html
+++ b/index.html
@@ -2,44 +2,61 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
-      integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>TO DO LIST</title>
+    <script src="main.js" defer></script>
+    <title>CHECK LIST</title>
   </head>
-  <body>
-    <div class="container">
-      <h3><i class="fas fa-clipboard-list"></i> To-Do List</h3>
-      <div class="add-items">
+  <body class="bg-dark">
+    <section class="container mt-2">
+      <h3 class="text-center text-light mb-5 fs-1">
+        <i class="fas fa-clipboard-list"></i> Check List
+      </h3>
+      <div class="add-items d-flex justify-content-center align-items-center">
         <input
+          class="w-50 p-2 me-2 outline-none"
           type="text"
           id="addList"
           placeholder="What do you want to get done today?"
         />
-        <button class="btn btn-dark" onclick="showLists()">Add</button>
-        <!-- <button class="btn btn-danger" onclick="resetLists()">Remove</button> -->
+        <div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-warning p-2">Add</button>
+            <button
+              type="button"
+              class="btn btn-warning dropdown-toggle dropdown-toggle-split"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            ></button>
+
+            <ul class="dropdown-menu d-block d-none">
+              <li><a class="dropdown-item" href="#">All tasks</a></li>
+              <li><a class="dropdown-item" href="#">Completed</a></li>
+              <li><a class="dropdown-item" href="#">Incomplete</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="info-contain">
-        <ul id="items-info">
-          <li>
-            Workout<i class="far fa-trash-alt" onclick="deleteList()"></i>
-          </li>
-          <li>Shower<i class="far fa-trash-alt" onclick="deleteList()"></i></li>
-          <li>
-            Breakfast<i class="far fa-trash-alt" onclick="deleteList()"></i>
-          </li>
+      <div class="tasks text-light">
+        <ul class="list-unstyled m-auto fs-4">
+          <li><span>Workout</span> <i class="far fa-trash-alt"></i></li>
+          <li><span>Shower</span> <i class="far fa-trash-alt"></i></li>
+          <li><span>Breakfast</span> <i class="far fa-trash-alt"></i></li>
         </ul>
       </div>
-    </div>
+    </section>
   </body>
-  <script src="main.js"></script>
 </html>
