--- a/index.html
+++ b/index.html
@@ -1,60 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
-    <title>CHECK LIST</title>
-  </head>
-  <body class="bg-dark">
-    <section class="container pt-3 text-light">
-      <h3 class="text-center mb-5 fs-1">
-        <i class="fas fa-clipboard-list"></i> Check List
-      </h3>
-      <div class="add-items d-flex justify-content-center align-items-center">
-        <input
-          class="w-50 p-2 me-2"
-          type="text"
-          id="val"
-          placeholder="What do you want to get done today?"
-        />
-        <button class="btn btn-warning py-2 px-3" id="addli">Add</button>
-      </div>
-      <div class="tasks task-all">
-        <ul class="list-unstyled m-auto fs-4">
-          <li><span>Task 1</span> <i class="far fa-trash-alt"></i></li>
-          <li><span>Task 2</span> <i class="far fa-trash-alt"></i></li>
-          <li><span>Task 3</span> <i class="far fa-trash-alt"></i></li>
-        </ul>
-      </div>
-    </section>
-    <section class="text-light container mt-4"  id="finished" >
-      <div class="completed-tab position-relative w-50 d-flex justify-content-start align-items-center ">
-        <i class="fas fa-chevron-down  d-none"></i>
-        <i class="fas fa-chevron-up"></i>
-        <h3 class="ms-3">Completed</h3>
-      </div>
-      <div class="tasks task-completed d-none">
-        <ul class="list-unstyled m-auto fs-4">
-          <li><span>Completed Item 1</span> <i class="far fa-trash-alt"></i></li>
-          <li><span>Completed Item 2</span> <i class="far fa-trash-alt"></i></li>
-          <li><span>Completed Item 3</span> <i class="far fa-trash-alt"></i></li>
-        </ul>
-      </div>
-    </section>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="main.js" defer></script>
+  <title>TASKS</title>
+</head>
+
+<body <section class="text-center pt-4">
+  <div class="d-flex justify-content-center">
+    <img src="icons/tasks.png" alt="tasks" width="45px" height="45px">
+    <h1 class="fw-normal text-dark ms-2">MY TASKS</h1>
+  </div>
+  <form class="row g-3 justify-content-center mt-3">
+    <div class="col-auto">
+      <input type="text" class="form-control p-2" maxlength="35" id="val" placeholder="Add new tasks" />
+    </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-dark add mb-3 p-2 px-3">
+        Add
+      </button>
+    </div>
+  </form>
+  </section>
+  <section class="todo-container">
+    <ul class="list-group w-50 m-auto"></ul>
+  </section>
+</body>
+
 </html>
