updated to remove existing lists

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         Add
       </button>
     </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-danger clear mb-3 p-2 px-3">
+        Clear
+      </button>
+    </div>
   </form>
   </section>
   <section class="todo-container">
